--- a/app/index.html
+++ b/app/index.html
@@ -23,42 +23,41 @@
 <!--   <link rel="stylesheet" href="css/style.min.css"> -->
 </head>
 <body>
-  <header class="page-header js-sticky">
-    <div class="page-header__wrapper">
-      <h1 class="visually-hidden">Travel2Buissnes - Регион сервиc</h1>
-      <a class="page-header__logo">
-        <img src="img/logo.svg" alt="Логотип компании - Travel2Buissnes">
-      </a>
-      <nav class="page-header__navigation nav">
-        <ul class="nav__list">
-          <li class="nav__item"><a href="#" class="nav__link">Компания</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Почему мы</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Отзывы</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
-        </ul>
-      </nav>
-      <div class="page-header__links links-buttons">
-        <a href="tel:+7(812)6221571" class="links-buttons__phone button">+7-812-622-15-71</a>
-        <a href="mailto:info@travel2business.ru" class="links-buttons__email button">info@travel2business.ru</a>
+  <header id="menu" class="page-header">
+      <div class="page-header__wrapper">
+        <h1 class="visually-hidden">Travel2Buissnes - Регион сервиc</h1>
+        <a href="#offer" class="page-header__logo">
+          <img src="img/logo.svg" alt="Логотип компании - Travel2Buissnes">
+        </a>
+        <nav class="page-header__navigation nav">
+          <ul class="nav__list">
+            <li class="nav__item"><a href="#" class="nav__link">Компания</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Почему мы</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Отзывы</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
+          </ul>
+        </nav>
+        <div class="page-header__links links-buttons">
+          <a href="tel:+7(812)6221571" class="links-buttons__phone button">+7-812-622-15-71</a>
+          <a href="mailto:info@travel2business.ru" class="links-buttons__email button">info@travel2business.ru</a>
+        </div>
       </div>
-    </div>
-  </header>
-  <main>
-    <div class="fullpage-wrapper">
+    </header>
+    <main>
       <nav id="fp-nav" class="left">
         <ul>
-          <li><a href="#" class="active"><span></span></a></li>
+          <li><a href="#"><span></span></a></li>
           <li><a href="#"><span></span></a></li>
           <li><a href="#"><span></span></a></li>
           <li><a href="#"><span></span></a></li>
           <li><a href="#"><span></span></a></li>
         </ul>
       </nav>
-      <section class="company">
-        <div class="company__wrapper">
-          <h2 class="company__title">Доверьте командировки своих сотрудников профессионалам</h2>
-          <a href="#" class="company__link button">Отправить заявку</a>
-          <div class="company__icons we-can">
+      <section id="section0"" class="section offer">
+        <div class="offer__wrapper">
+          <h2 class="offer__title">Доверьте командировки своих сотрудников профессионалам</h2>
+          <a href="#" class="offer__link button">Отправить заявку</a>
+          <div class="offer__icons we-can">
             <div class="we-can__item">
               <svg width="32" height="32" class="we-can__item-icon">
                 <rect width="32" height="32" fill="#000"></rect>
@@ -96,60 +95,135 @@
               <p class="we-can__item-text">Поможем с визой и страхованием</p>
             </div>
           </div>
-          
-
-        </div>
-      </section><section class="company">
-        <div class="company__wrapper">
-          <h2 class="company__title">Доверьте командировки своих сотрудников профессионалам</h2>
-          <a href="#" class="company__link button">Отправить заявку</a>
-          <div class="company__icons we-can">
-            <div class="we-can__item">
-              <svg width="32" height="32" class="we-can__item-icon">
-                <rect width="32" height="32" fill="#000"></rect>
-              <svg>
-              <p class="we-can__item-text">Купим ж/д<br> и авиабилеты</p>
-            </div>
-            <div class="we-can__item">
-              <svg width="32" height="32" class="we-can__item-icon">
-                <rect width="32" height="32" fill="#000"></rect>
-              <svg>
-              <p class="we-can__item-text">Встретим и отвезем в гостиницу</p>
-            </div>
-            <div class="we-can__item">
-              <svg width="32" height="32" width="32" height="32" class="we-can__item-icon">
-                <rect width="32" height="32" fill="#000"></rect>
-              <svg>
-              <p class="we-can__item-text">Подберем для вас экскурсию</p>
-            </div>
-            <div class="we-can__item">
-              <svg width="32" height="32" class="we-can__item-icon">
-                <rect width="32" height="32" fill="#000"></rect>
-              <svg>
-              <p class="we-can__item-text">Забронируем гостиницы, и конференц-залы</p>
-            </div>
-            <div class="we-can__item">
-              <svg width="32" height="32" class="we-can__item-icon">
-                <rect width="32" height="32" fill="#000"></rect>
-              <svg>
-              <p class="we-can__item-text">Организуем для вас MICE</p>
-            </div>
-            <div class="we-can__item">
-              <svg width="32" height="32" class="we-can__item-icon">
-                <rect width="32" height="32" fill="#000"></rect>
-              <svg>
-              <p class="we-can__item-text">Поможем с визой и страхованием</p>
-            </div>
-          </div>
-          
-
         </div>
       </section>
-    </div>
-  </main>
+      <section id="section1" class="section company">
+        <div class="company__wrapper">
+          <h2 class="company__title">Компания</h2>
+          <div class="company__text">
+            <p>Мы – современное бизнес-агентство, работаем в сфере делового туризма
+            с 2007 года. Наш опыт и профессионализм подтверждены не только годами
+            опыта, но и тысячами довольных гостей и заказчиков.</p>
+            <p>В нашем динамичном мире деловой туризм становится все более 
+            востребованным. Профессиональные конференции, профильные выставки, 
+            командировки в филиалы, обучение в других городах – это лишь малый
+            перечень того, когда компании сталкиваются с необходимостью организации
+            деловых поездок. Поэтому некоторые компании создают собственный отдел,
+            занимающийся деловым туризмом, а другие – выбирают аутсорсинг. Мы 
+            предоставляем такие услуги и полностью берем на себя организацию 
+            деловых поездок и мероприятий в компаниях. Для 70% наших клиентов 
+            стали постоянными партнерами.</p>
+          <div class="company__stats">
+            <p><span>12+</span>лет на рынке</p>
+            <p><span>15000+</span>клиентов</p>
+            <p><span>10</span>бронирований в месяц</p>
+          </div>
+          <a href="#" class="company__link button">Отправить заявку</a>
+        </div>
+        <div class="company__img">
+          <img src="http://placehold.it/470x295">
+        </div>
+      </section>
+      <section id="section2" class="section advantages">
+        <div class="advantages__wrapper">
+          <p class="advantages__teaser">С нами удобно. Мы не большие, но каждого клиента знаем лично, и готовы помочь в любую минуту.</p>
+          <div class="advantages__list">
+            <div class="advantages__item">
+              <svg width="50" height="50" class="advantages__img">
+                <rect width="50" height="50" fill="#000"></rect>
+              </svg>
+              <h3 class="advantages__title">Профессиональный подход</h3>
+              <p class="advantages__text">Команда профессионалов в сфеределового
+               туризма поможет в организации поездок ваших  сотрудников.</p>
+            </div>
+            <div class="advantages__item">
+              <svg width="50" height="50" class="advantages__img">
+                <rect width="50" height="50" fill="#000"></rect>
+              </svg>
+              <h3 class="advantages__title">Все услуги в «одном окне»</h3>
+              <p class="advantages__text">Экономия времени за счет коммуникации 
+                с одним поставщиком услуг по всем организационным вопросам.</p>
+            </div>
+            <div class="advantages__item">
+              <svg width="50" height="50" class="advantages__img">
+                <rect width="50" height="50" fill="#000"></rect>
+              </svg>
+              <h3 class="advantages__title">Удобная форма оплаты</h3>
+              <p class="advantages__text">Принимаем оплату наличными, б/нал, 
+              кредитная карта, возможна отсрочка платежа.</p>
+            </div>
+            <div class="advantages__item">
+              <svg width="50" height="50" class="advantages__img">
+                <rect width="50" height="50" fill="#000"></rect>
+              </svg>
+              <h3 class="advantages__title">Согласованная отчетность</h3>
+              <p class="advantages__text">Мы оформляем все необходимые закрывающие
+               документы и своевременно предоставляем их бухгалтерии заказчика.</p>
+            </div>
+            <div class="advantages__item">
+              <svg width="50" height="50" class="advantages__img">
+                <rect width="50" height="50" fill="#000"></rect>
+              </svg>
+              <h3 class="advantages__title">Оптимизация затрат</h3>
+              <p class="advantages__text">Сокращение собственных административных
+               расходов компании за счет подбора наиболее оптимальных вариантов 
+               бронирования. Учет пожеланий и бюджета клиента. </p>
+            </div>
+            <div class="advantages__item">
+              <svg width="50" height="50" class="advantages__img">
+                <rect width="50" height="50" fill="#000"></rect>
+              </svg>
+              <h3 class="advantages__title">Персональный менеджер 24/7</h3>
+              <p class="advantages__text">Помощь и консультирование по вопросам 
+                выбора и бронирования услуги. </p>
+            </div>
+          </div>
+          <div class="advantages__link">
+            <p class="advantages__question">Остались вопросы по процессу работы?</p>
+            <a href="#" class="advantages__button button">Проконсультироваться</a>
+          </div>
+        </div>
+        <section id="section3" class="section reviews">
+          <div class="reviews__wrapper">
+            <div class="reviews__clients clients">
+              <p class="clients__text">Вот некоторые из клиентов, которые уже получают выгоды от сотрудничества с нами</p>
+              <ul class="clients__list">
+                <li class="clients__item">
+                  <svg width="170" height="60" class="we-can__item-icon">
+                    <rect width="170" height="60" fill="#000"></rect>
+                  <svg>
+                </li>
+                <li class="clients__item">
+                  <svg width="32" height="32" class="we-can__item-icon">
+                    <rect width="32" height="32" fill="#000"></rect>
+                  <svg>
+                </li>
+                <li class="clients__item">
+                  <svg width="170" height="60" class="we-can__item-icon">
+                    <rect width="170" height="60" fill="#000"></rect>
+                  <svg>
+                </li>
+                <li class="clients__item">
+                  <svg width="170" height="60" class="we-can__item-icon">
+                    <rect width="170" height="60" fill="#000"></rect>
+                  <svg>
+                </li>
+              </ul>
+              <div class="reviews__slider review">
+                <div class="review__slide">
+                  <div class="review__img">
+                    <img src="#" alt="#">
+                  </div>
+                  <p class="review__text"></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+    </main>
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="libs/fullpage/jquery.fullpage.js"></script>
   <script src="js/main.js"></script>
-
 </body>
 </html>
